# DataConnectors

./: README.md  pyproject.toml
data_connectors/: __init__.py  base.py
data_connectors/reliefweb/: __init__.py  connector.py  pdf_extractor.py  scraper.py  sources_metadata.json
